mac/Sources/EivizMixer/eiviz_mixer.h

typedef struct EivizOverlayDesc {
    uint64_t source_id;
    EivizRect rect;
    EivizRect crop;
    float opacity;
    int32_t z;
    uint32_t audio_follow;
    uint32_t hidden;
    const char *label;
} EivizOverlayDesc;
typedef struct EivizUnitState {
    uint64_t program_source;
    uint64_t preview_source;
    float mix;
    uint32_t transition_kind;
    uint32_t overlay_count;
    uint32_t mv_slot_count;
    EivizOverlayDesc overlays[8];
    uint64_t mv_slots[16];
    uint32_t transition_easing;
    uint32_t transition_direction;
    uint32_t keep_preview;
    uint32_t pad;
    float dip_r;
    float dip_g;
    float dip_b;
    float dip_a;
    uint64_t incoming_source;
    float softness;
    float param;
} EivizUnitState;
typedef struct EivizAudioPeak {
    uint64_t source_id;
    float left;
    float right;
} EivizAudioPeak;
typedef struct EivizMixerStats {
    float render_ms;
    float frame_budget_ms;
    uint64_t ram_bytes;
    uint64_t vram_bytes;
    uint64_t compose_vram_bytes;
    uint64_t delay_vram_bytes;
    uint64_t surface_lost;
} EivizMixerStats;
uint32_t mixer_ping(void);
int32_t mixer_create(uint64_t adapter_luid, uint32_t fps_num, uint32_t fps_den);
void mixer_destroy(void);
int32_t mixer_create_unit(uint64_t unit_id, uint32_t width, uint32_t height);
int32_t mixer_destroy_unit(uint64_t unit_id);
int32_t mixer_unit_configure(uint64_t unit_id, uint32_t width, uint32_t height, uint32_t fps_num, uint32_t fps_den);
int32_t mixer_define_scene(uint64_t scene_id, uint32_t width, uint32_t height, uint32_t count, const EivizOverlayDesc *layers);
int32_t mixer_destroy_scene(uint64_t scene_id);
int32_t mixer_define_generator(uint64_t id, uint32_t kind, float r, float g, float b, float a, uint32_t scroll);
int32_t mixer_resize_monitor(uint64_t monitor_id, uint32_t width, uint32_t height);
int32_t mixer_detach_monitor(uint64_t monitor_id);
int32_t mixer_monitor_set_source(uint64_t monitor_id, uint64_t source_id);
int32_t mixer_unit_set_state(uint64_t unit_id, const EivizUnitState *state);
int32_t mixer_unit_get_state(uint64_t unit_id, EivizUnitState *out);
int32_t mixer_unit_cut(uint64_t unit_id, uint32_t swap, uint64_t incoming_source);
int32_t mixer_unit_auto(uint64_t unit_id, uint32_t kind, uint32_t duration_ms, uint32_t swap, uint32_t keep_preview, uint32_t easing, uint32_t direction, float dip_r, float dip_g, float dip_b, float dip_a, uint64_t incoming_source, float softness, float param);
int32_t mixer_register_source(uint64_t id, uint32_t width, uint32_t height, uint32_t format);
int32_t mixer_push_frame(uint64_t id, const uint8_t *ptr, uint32_t stride, uint32_t height, int64_t pts);
int32_t mixer_load_still(uint64_t id, const char *path);
int32_t mixer_omt_connect(uint64_t id, const char *address, uint32_t use_gpu, uint32_t frame_buffer_frames, uint32_t quality);
int32_t mixer_omt_start_send(uint64_t unit_id, const char *name);
int32_t mixer_output_add(uint64_t output_id, uint32_t transport, const char *name, uint32_t source_kind, uint64_t source_id, uint64_t unit_id, uint32_t use_gpu, uint64_t audio_bus_id, uint32_t skip_idle_encode);
int32_t mixer_output_remove(uint64_t output_id);
int32_t mixer_omt_discover(uint8_t *out, size_t cap);
int32_t mixer_copy_audio_peaks(EivizAudioPeak *out, uint32_t cap);
int32_t mixer_copy_stats(EivizMixerStats *out);
int32_t mixer_set_frame_buffer(uint32_t frames);
int32_t mixer_last_error(uint8_t *out, size_t cap);